# ProjetOC

./: .gitignore  README.md  pyproject.toml
results/: comparison_runs.csv  comparison_summary.csv  comparison_summary.md
scripts/: compare_acos.py  generate_report_graphs.py
src/metaheuristique/: __init__.py  benchmarks.py  comparison.py  knapsack_aco.py  knapsack_aco_ml.py  ml.py  types.py
tests/: conftest.py  test_benchmarks.py  test_compare_script_exports.py  test_comparison.py  test_generate_report_graphs.py  test_knapsack_aco.py  test_knapsack_aco_ml.py
