[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knapsack-aco-ml"
version = "0.1.0"
description = "Solveurs Knapsack avec ACO de base et variante ACO guidee par ML."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0,<9",
    "scikit-learn>=1.5,<2",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]
